ListMethodsTest + javadoc.